Challenge: Bid farewell to each programming language as it gets erased from existance 👋😭 Use the `getFarewellText` function from the new utils.js file to generate the text. Check hint.md if you're feeling stuck, but do your best to solve the challenge without the hint! 🕵️

--- a/assembly_endgame/src/index.css
+++ b/assembly_endgame/src/index.css
@@ -39,11 +39,13 @@ header>p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   color: #F9F4DA;
   border-radius: 4px;
   margin-block: 30px;
   width: 100%;
   max-width: 350px;
+  min-height: 60px;
 }
 
 .game-status.lost {
@@ -54,6 +56,11 @@ header>p {
   background-color: #10A95B;
 }
 
+.game-status.farewell {
+  background-color: #7A5EA7;  
+  border: 1px dashed #323232;
+}
+
 .game-status>h2 {
   font-size: 1.25rem;
   margin: 5px
@@ -61,6 +68,11 @@ header>p {
 
 .game-status>p {
   margin: 5px;
+}
+
+.game-status > p.farewell-message {
+  font-style: italic;
+  font-weight: 400;
 }
 
 .languages-chips{
